# zai

./: .cursorrules  .env.web  .env.web.example  .gitignore  .gitmodules  .oxfmtrc.json  .oxlintrc.json  .pnp.cjs  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  bun.lockb  components.json  deny.toml  eslint.config.js  index.html  lefthook.yml  osv-scanner.toml  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json  tailwind.config.js  tsconfig.base.json  tsconfig.json  vite.config.ts
apps/server/: Cargo.toml
apps/server/src/: lib.rs  main.rs  mutation_auth.rs
apps/server/src/api/: alerts.rs  error.rs  mod.rs
apps/server/tests/: alert_contract_parity.rs  alerts.rs  budget_contract_parity.rs  budgets.rs  categories.rs  category_contract_parity.rs  recurring_contract_parity.rs  recurring_privacy_canaries.rs  recurring_privacy_inventory.rs  server.rs  transaction_contract_parity.rs  transaction_import_safety.rs  transactions.rs  transactions_list_filters.rs
apps/server/tests/budget_contract/: mod.rs
apps/server/tests/common/: list_filters.rs  mod.rs
apps/server/tests/contract_harness/: dispatch.rs  helpers.rs  mod.rs  normalize.rs  recurring.rs  seeds.rs
apps/server/tests/recurring_contract/: mod.rs
apps/tauri/: Cargo.toml  tauri.conf.json
apps/tauri/capabilities/: default.json
apps/tauri/icons/: icon.icns
apps/tauri/scripts/: clean-db.ts
apps/tauri/src/: lib.rs  main.rs  tests.rs
apps/tauri/src/commands/: budgets.rs  domain_alerts.rs  mod.rs  recurring_transactions.rs  stronghold.rs  transaction_categories.rs  transactions.rs
apps/tauri/src/context/: providers.rs  registry.rs
apps/tauri/src/tests/: native_smoke_support.rs
apps/tauri/tests/: security_manifest.rs
crates/app/: Cargo.toml
crates/app/src/: lib.rs  recurring_supervisor.rs
crates/core/: Cargo.toml
crates/core/migrations/2025-09-26-065400-0000_init/: up.sql
crates/core/src/: database_error.rs  errors.rs  lib.rs  query.rs
crates/core/src/database/: errors.rs  mod.rs  pagination.rs
crates/core/src/features/: mod.rs
crates/core/src/time/: clock.rs  instant.rs  local.rs  mod.rs  provider.rs  resolve.rs  zone.rs
crates/db/: Cargo.toml
crates/db/fixtures/released_schemas/: README.md  current_populated_seed.sql  v0000_initial.sql  v0000_initial_seed.sql  v0001_category_invariants.sql  v0001_category_invariants_seed.sql  v0002_transaction_indexes.sql  v0002_transaction_indexes_seed.sql  v0003_category_roles.sql  v0003_category_roles_seed.sql  v0004_budgets.sql  v0004_budgets_seed.sql  v0005_budget_rollover_modes.sql  v0005_budget_rollover_modes_seed.sql  v0006_budget_revisions.sql  v0006_budget_revisions_seed.sql  v0007_budget_lifecycle.sql  v0007_budget_lifecycle_seed.sql  v0008_domain_alerts.sql  v0008_domain_alerts_seed.sql  v0009_recurring_transactions.sql  v0009_recurring_transactions_seed.sql
crates/db/migrations/2025-09-26-065400-0000_init/: down.sql  up.sql
crates/db/migrations/2026-07-05-191500-0001_category_invariants/: down.sql  up.sql
crates/db/migrations/2026-07-08-180600-0002_transaction_indexes/: down.sql  up.sql
crates/db/migrations/2026-07-10-170000-0002_budgets/: down.sql  up.sql
crates/db/migrations/2026-07-12-090000-0003_category_roles/: down.sql  up.sql
crates/db/migrations/2026-07-12-100000-0004_budgets/: down.sql  up.sql
crates/db/migrations/2026-07-12-110000-0005_budget_cadences/: down.sql  up.sql
crates/db/migrations/2026-07-12-120000-0005_budget_rollover_modes/: down.sql  up.sql
crates/db/migrations/2026-07-12-180000-0006_budget_revisions/: down.sql  up.sql
crates/db/migrations/2026-07-12-200000-0007_budget_lifecycle/: down.sql  up.sql
crates/db/migrations/2026-07-14-120000-0008_domain_alerts/: down.sql  up.sql
crates/db/migrations/2026-07-15-220000-0009_category_color_contract/: up.sql
crates/db/migrations/2026-07-20-210000-0009_recurring_transactions/: down.sql  up.sql
crates/db/migrations/2026-07-21-190000-0010_recurring_descriptions/: down.sql  up.sql
crates/db/src/: blocking.rs  connection.rs  errors.rs  lib.rs  migration_fixture_support.rs  migration_recurring_tests.rs  migration_tests.rs  migration_tests_released.rs  pagination.rs  schema.rs  sql_statement_counter.rs  test_utils.rs  tz.rs  write_actor.rs
crates/db/src/budgets/: alerts.rs  calculation.rs  category_impact.rs  edit.rs  history.rs  lifecycle.rs  list_projection.rs  mod.rs  models.rs  projection.rs  projection_persistence.rs  repair.rs  repository.rs  repository_alert_tests.rs  repository_cadence_tests.rs  repository_concurrency_tests.rs  repository_delete_tests.rs  repository_history_tests.rs  repository_list_set_tests.rs  repository_performance_tests.rs  repository_recovery_tests.rs  repository_repair_tests.rs  repository_safety_tests.rs  repository_tests.rs  repository_update_tests.rs
crates/db/src/code_migrations/: mod.rs  runner.rs  store.rs
crates/db/src/domain_alerts/: insert.rs  lifecycle.rs  list.rs  mod.rs  models.rs  repository.rs  repository_event_tests.rs  repository_insert_tests.rs  repository_lifecycle_tests.rs  repository_list_tests.rs
crates/db/src/migration_tests_recurring/: mod.rs  schema_tests.rs  upgrade_tests.rs
crates/db/src/recurring_transactions/: adopt.rs  adopt_tests.rs  bulk_tests.rs  crash_child.rs  create.rs  edit.rs  edit_policy_tests.rs  edit_revision_tests.rs  edit_tests.rs  failpoints.rs  feed.rs  fulfill.rs  fulfill_head.rs  fulfill_select.rs  (+32 more)
src-database/: Cargo.toml
src-database/migrations/2025-09-23-172527-0000_init/: down.sql  up.sql
src-database/src/: errors.rs  lib.rs  schema.rs
src-database/src/database/: mod.rs  write_actor.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  migrated.json
src-tauri/migrations/: 001_create_initial_tables.sql
src-tauri/src/: gocardless.rs  lib.rs  main.rs
src-tauri/src/commands/: mod.rs  stronghold.rs  transaction_categories.rs  transactions.rs
src-tauri/src/context/: mod.rs  providers.rs  registry.rs
(+838 files in other folders)
