[workspace]
resolver = "3"
members = [
    "apps/server",
    "apps/tauri",
    "crates/app",
    "crates/core",
    "crates/db",
]

[workspace.package]
version = "0.0.1-alpha.1"
edition = "2024"
license = "GPL-3.0-only"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"

[workspace.dependencies]
zai-core = { path = "crates/core" }
zai-app = { path = "crates/app" }
zai-db = { path = "crates/db" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
diesel = { version = "2.2.11", features = [
    "sqlite",
    "r2d2",
    "chrono",
    "numeric",
] }
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
dotenvy = "0.15.7"
log = "0.4.28"
r2d2 = "0.8.10"
thiserror = "2.0.12"
chrono = { version = "0.4.42", features = ["serde"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "sync"] }
async-trait = "0.1.89"
uuid = { version = "1.18.1", features = ["v4"] }
futures = "0.3.31"
