[package]
name = "zai-database"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel = { version = "2.2.11", features = ["sqlite", "r2d2", "chrono", "numeric"] }
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
dotenvy = "0.15.7"
log = "0.4.27"
r2d2 = "0.8.10"
thiserror = "2.0.12"
chrono = { version = "0.4.42", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "sync"] }
async-trait = "0.1.89"
uuid = { version = "1.18.1", features = ["v4"] }
tempfile = "3.23.0"