[package]
name = "Zai"
version = "0.1.0"
description = "Your personal finance app"
authors = ["fedemas"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-stronghold = "2"
argon2 = "0.5.3"
tauri-plugin-store = "2"
dotenvy = "0.15.7"
specta = "2.0.0-rc.22"
specta-typescript = "0.0.9"
tauri-specta = { version = "2.0.0-rc.21", features = ["typescript", "derive"] }
zai-core = { version = "0.1.0", path = "../src-core" }
zai-db = { version = "0.1.0", path = "../src-db" }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
