[package]
name = "zai-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "zai-server"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
axum = "0.8"
chrono = { workspace = true }
form_urlencoded = "1.2"
futures-util = "=0.3.31"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net"] }
tower-http = { version = "0.6", features = ["cors"] }
zai-app = { workspace = true }
zai-core = { workspace = true }

[dev-dependencies]
axum = "0.8"
chrono = { workspace = true }
serde_json = { workspace = true }
tower = { version = "0.5", features = ["util"] }
tokio = { workspace = true, features = ["io-util", "net"] }
uuid = { workspace = true }
zai-app = { workspace = true }
zai-core = { workspace = true }
zai-db = { workspace = true }
