[package]
name = "zai"
version.workspace = true
description = "Your personal finance app"
authors = ["fedemas"]
edition.workspace = true

[lib]
name = "zai_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[lints]
workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { workspace = true }
serde_json = { workspace = true }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-stronghold = "2"
argon2 = "0.5.3"
tauri-plugin-store = "2"
dotenvy = { workspace = true }
specta = "2.0.0-rc.22"
specta-typescript = "0.0.9"
tauri-specta = { version = "2.0.0-rc.21", features = ["typescript", "derive"] }
zai-app = { workspace = true }
zai-core = { workspace = true }
log = { workspace = true }
chrono = { workspace = true }
keyring = "3"
rand = "0.9"
base64 = "0.22"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
