[package]
name = "zai"
version.workspace = true
description = "Your personal finance app"
authors = ["fedemas"]
edition.workspace = true

[lib]
name = "zai_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[lints]
workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { workspace = true }
serde_json = { workspace = true }
tauri-plugin-fs = "2"
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
dotenvy = { workspace = true }
zai-app = { workspace = true }
zai-core = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
chrono = { workspace = true }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
