[package]
name = "zai-app"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
zai-core = { workspace = true }
zai-db = { workspace = true }
log = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
uuid = { workspace = true }
