[package]
name = "zai-db"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
zai-core = { workspace = true }
diesel = { workspace = true }
diesel_migrations = { workspace = true }
log = { workspace = true }
r2d2 = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
uuid = { workspace = true }
