[package]
name = "zai-db"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[features]
default = []
failpoints = []

[[bin]]
name = "recurring-crash-child"
path = "src/bin/recurring-crash-child.rs"
required-features = ["failpoints"]

[[bin]]
name = "recurring-reference-runner"
path = "src/bin/recurring-reference-runner.rs"

[dependencies]
zai-core = { workspace = true }
diesel = { workspace = true }
diesel_migrations = { workspace = true }
log = { workspace = true }
r2d2 = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
